all elements on the page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             </div>
             <div class="logo-bar">
                 <div class="logo">
-                    <img src="images/Norse-Bold.otf" alt="logo of Odin">
+                    <img src="images/odin-lined.png" alt="logo of Odin">
                     <h1 class="title">ODIN</h1>
                 </div>
             </div>
-            <p>Photo by Halie West on Unsplash</p>
+            <p class="img-footer">Photo by Halie West on Unsplash</p>
         </div>
         <div class="right-side">
             <div class="text">
