finish left side

--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 <body>
     <div class="container">
         <div class="left-side">
-            <div>
-                <img class="picture" src="images/halie-west-25xggax4bSA-unsplash.jpg" alt="plants">
-            </div>
             <div class="logo-bar">
-                <div class="logo">
-                    <img src="images/odin-lined.png" alt="logo of Odin">
-                    <h1 class="title">ODIN</h1>
-                </div>
+                <img class="logo" src="images/odin-lined.png" alt="logo of Odin">
+                <h1 class="title">ODIN</h1>
             </div>
-            <p class="img-footer">Photo by Halie West on Unsplash</p>
+            <div class="left-footer">
+                <p>Photo by Halie West on Unsplash</p>
+            </div>
         </div>
         <div class="right-side">
             <div class="text">
@@ -54,12 +51,12 @@
                     
                 </div>
             </div>
-        <div class="button-footer">
-            <button>Create Account</button>
-            </form>
-            <p>Already have an account? Log in</p>
+            <div class="button-footer">
+                <button>Create Account</button>
+                </form>
+                <p>Already have an account? Log in</p>
+            </div>
         </div>
-    </div>
     </div>
 </body>
 </html>
