continue right side styling

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     
                 </div>
             </div>
-            <div class="button-footer">
-                <button>Create Account</button>
+            <div class="button-area">
+                <button class="button">Create Account</button>
                 </form>
                 <p>Already have an account? Log in</p>
             </div>
