--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <h1 class="title">ODIN</h1>
             </div>
             <div class="left-footer">
-                <p>Photo by Halie West on Unsplash</p>
+                <p>
+                    Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/">Unsplash</a>
+                </p>     
             </div>
         </div>
         <div class="right-side">
@@ -54,7 +56,10 @@
             <div class="button-area">
                 <button class="button">Create Account</button>
                 </form>
-                <p>Already have an account? Log in</p>
+                <p class="button-text">
+                    Already have an account?
+                    <a href="">Log in</a> 
+                </p>
             </div>
         </div>
     </div>
