--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -30,7 +31,7 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
             <div class="form">
-                <form action="" method="get"></form>
+                <form action="" method="get">
                 <h3>Let's do this!</h3>
                 <div class="form-bot">
                     <div class="form-left">
